--- a/BackgroundSAT.tex
+++ b/BackgroundSAT.tex
@@ -1,4 +1,4 @@
-\chapter{Background: The Satisfiability Problem and Model Checking}
+\chapter{Background: The Satisfiability Problem}
 
 CNF
 
@@ -21,17 +21,3 @@ Example Clause Learning Algorithm
 Resolution Proof System
 
 Resolution Algorithm
-
-\section{Model Checking}
-
-Kripke Structures
-
-LTL 
-
-LTL Model Checking
-
-SAT Based Model Checking
-
-Inductive Verification
-
-Bounded Model Checking
