--- a/lit.bib
+++ b/lit.bib
@@ -425,6 +425,21 @@
   publisher = {Springer-Verlag}
 }
 
+@INPROCEEDINGS{EM82,
+  author = {Clarke, E. M. and Emerson, E. A.},
+  title = {Design and synthesis of synchronization skeletons using branching
+	time temproal logic},
+  booktitle = {Logic of Programs: Workshop},
+  year = {1982},
+  editor = {Kozen D},
+  volume = {131},
+  series = {Lecture {N}otes in {C}omputer {S}cience},
+  pages = {52--71},
+  publisher = {Springer Berlin / Heidelberg},
+  owner = {andylawrence},
+  timestamp = {2014.04.09}
+}
+
 @BOOK{EMC99,
   title = {Model {C}hecking},
   publisher = {MIT Press},
@@ -1179,6 +1194,21 @@
   year = {1977},
   owner = {csal},
   timestamp = {2014.01.21}
+}
+
+@INPROCEEDINGS{JQ82,
+  author = {Queille, J. P. and Sifakis},
+  title = {Specification and verification of concurrent systems in CESAR},
+  booktitle = {International Symposium on Programming: Proceedings of the 5th Colloquium
+	Turin},
+  year = {1982},
+  editor = {Dezani-Ciancaglini, M. and Montanari},
+  volume = {137},
+  series = {Lecture {N}otes in {C}omputer {S}cience},
+  pages = {337--351},
+  publisher = {Springer-Verl},
+  owner = {andylawrence},
+  timestamp = {2014.04.09}
 }
 
 @MISC{ETCSHB,
