--- a/BackgroundLogic.tex
+++ b/BackgroundLogic.tex
@@ -333,7 +333,6 @@ There are different induction schemes  that yield different extracted programs h
 
 
 
-
 \[ \llbracket \exists^{-}_{x^{\rho}, A, B} \rrbracket := \left\{ 
 \begin{array}{l l}
 \lambda x^{\rho} \lambda f^{\rho \to \tau (B)}. f x  & \quad \text{if $\tau (A) = \epsilon$} \\ 
@@ -343,7 +342,25 @@ There are different induction schemes  that yield different extracted programs h
 \end{array} \right.
 \]
 
+The extracted program for an application of general induction is the guarded recursion operation \texttt{GRecGuard}. During our later proof we perform induction on a measure and as a result this same measure also appears in the extracted Minlog term.  This guarded recursion term can be expressed as a function as follows:
 
+\begin{lstlisting}
+(GRecGuard ρ1 ρ2 ρ3 τ) μ z1 z2 z3 G t = f z1 z2 z3 t where
+f : ρ1 ⇒ ρ2 ⇒ ρ3 ⇒ Boole ⇒ τ
+f x1 x2 x3 True = G x x2 x3 ([y1, y2, y3].f y1 y2 y3(μ y1 y2 y3 < μ x1 x2 x3))
+f x1 x2 x3 False = Inhab
+\end{lstlisting}
+
+
+Similarly, the extracted program for non-measure induction is a recursion operation \texttt{Rec}.
+
+ it is possible to write the operation Rec list ρ ⇒ τ using a function
+f : listρ ⇒ τ which gives a more intuitive view of its behaviour.
+\begin{lstlisting}
+(Rec listρ ⇒ τ)ys z G = f ys where
+f Nil = z
+f (x :: xs) = G x xs(f xs)
+\end{lstlisting}
 
 \subsection*{Realizability}
 We need to have a notion of what it means for an extracted program to realize
