--- a/lit.bib
+++ b/lit.bib
@@ -367,6 +367,18 @@
   publisher = {Springer Berlin, Heidelberg}
 }
 
+@INPROCEEDINGS{EB11,
+  author = {Brady, E.},
+  title = {Idris: Systems Programming Meets Full Dependent Types},
+  booktitle = {Proceedings of the 5th ACM workshop on Programming Languages Meets
+	Program Verification},
+  year = {2011},
+  pages = {43 -- 54},
+  publisher = {ACM},
+  owner = {andylawrence},
+  timestamp = {2014.04.10}
+}
+
 @ARTICLE{RB86,
   author = {Bryant, K. L.},
   title = {Graph-Based Algorithms for {B}oolean Function Manipulation},
@@ -639,6 +651,20 @@
   volume = {3920},
   pages = {167--181},
   publisher = {Springer-Verlag}
+}
+
+@INPROCEEDINGS{GF05,
+  author = {Frehse, G.},
+  title = {PHAVer: Algorithmic Verification of Hybrid Systems Past HyTech},
+  booktitle = {Hybrid Systems: Computation and Control},
+  year = {2005},
+  editor = {Morari, M. and Thiele, L.},
+  volume = {3414},
+  series = {Lecture {N}otes in {C}omputer {S}cience},
+  pages = {258--273},
+  publisher = {Springer Berlin / Heidelberg},
+  owner = {andylawrence},
+  timestamp = {2014.04.10}
 }
 
 @INCOLLECTION{GG69,
