--- a/BackgroundModelChecking.tex
+++ b/BackgroundModelChecking.tex
@@ -6,7 +6,7 @@ There are many systems in the modern world that are built from communicating con
 Model checking is a formal method that is typically used to reason about the correctness of finite systems with a discrete state space. Due to the nature of modern computers, such systems occur often in the area of computer science such as electronics or processes on a computer. It attempts to perform an exhaustive search of the state space to check that each state has a particular property. In this thesis is concerned with two types of model checking. One encodes the object being modelled as some form of state transition system before checking properties over that system specified in some temporal logic. This is called temporal logic model checking and was invented in the 1980s by two seperate research teams  Clarke and Emerson \cite{EM82} and Quielle and Sifakis \cite{JQ82}. The other encodes the system and the model checking problem over it as a SAT problem which is then decided using a SAT solver \cite{MS00}. The very nature of this formal method in that it is essentially an exhaustive search is also its downfall. A small increase in the complexity of the computer system can lead to a large increase in the state space. This exponential increase in the complexity of model checking a particular system is called the state \emph{space explosion problem}. Most improvements to the standard model checking algorithms are designed to reduce the impact of this problem. These optimisations typically exploit the structure of the system or properties such as symmetry to cut down the state space.
 
 \section{Model Checkng Preliminaries}
-In the following we shall describe some logical fundementals needed to understand model checking. Firstly we shall introduce a form of state transition graph namely \emph{Kripke Structures} which are used capture the behaviour of finite discrete systems. Following this we shall introduce a language \emph{Linear Temporal Logic}which will enable us to formulate properties over these systems.
+In the following we shall describe some logical fundementals needed to understand model checking. Firstly we shall introduce a form of state transition system namely \emph{Kripke Structures} which are used capture the behaviour of finite discrete systems. Following this we shall introduce a language \emph{Linear Temporal Logic}which will enable us to formulate properties over these systems.
 
 \begin{mydef}[Kripke Structure]
 Given a set of atomic propositions $AP$. We define a Kripke Structure $M$ to be a four tuple $(S, S_0, R, L)$
@@ -111,8 +111,26 @@ from left to right until no further equivalence is applicable.
 
 LTL Model Checking
 
-SAT Based Model Checking
+\section{SAT Based Model Checking}
 
-Inductive Verification
+\begin{mydef}[Reachability]
+Given a transition system $M = (S,S_0, R)$, we define $Reach_R(S, S_0)$ the set of states reachable from $S_0$ in $S$ via the transition relation $R$. Formally it is the least set of states such that the following holds: 
 
-Bounded Model Checking
+$$ Reach_R(S,S_0) = \{s \in S | s \in S_0 \vee R(r,s) \wedge r \in Reach_R(S,S_0)\} $$
+
+\end{mydef}
+
+\begin{mydef}[Model Safety]
+We define the model represented by a transition system $M = (S,S_0, R)$ to be safe with respect to a safety property $P$ if the following holds:
+$$Reach_R(S,S_0) \subseteq P$$
+
+\end{mydef}
+
+\subsection*{Inductive Verification}
+
+
+
+\subsection*{Bounded Model Checking}
+
+
+
